--- a/frontend/src/styles/common.css
+++ b/frontend/src/styles/common.css
@@ -10,10 +10,9 @@
 
 .page-title {
   text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 2rem;
-  color: #fff;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
+  color: #212529;
 }
 
 /* Standard Content Card */
@@ -77,4 +76,14 @@
   border: 1px solid #ccc;
   border-radius: 8px;
   font-size: 1rem;
+}
+
+/* Hide number input spinners for a cleaner look */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
 } 
