--- a/frontend/src/styles/common.css
+++ b/frontend/src/styles/common.css
@@ -10,9 +10,38 @@
 
 .page-title {
   text-align: center;
-  font-size: 2.5rem;
-  margin-bottom: 1rem;
+  font-size: 2.25rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
   color: #212529;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  color: #212529;
+}
+
+h3 {
+  font-size: 1.25rem;
+  font-weight: 600;
+  color: #212529;
+}
+
+h4 {
+  font-size: 1rem;
+  font-weight: 600;
+  color: #212529;
+}
+
+.page-description {
+    text-align: center;
+    color: #6c757d;
+    margin-top: 0.5rem;
+    margin-bottom: 2rem;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 /* Standard Content Card */
